project(rogulike)
add_library(Archer STATIC Enemy/Archer.cpp)
add_library(Enemy STATIC Enemy/Enemy.cpp)
add_library(Warrior STATIC Enemy/Warrior.cpp)
add_library(ArcherFactory STATIC Enemy/ArcherFactory.cpp)
add_library(EnemyFactory STATIC Enemy/EnemyFactory.cpp)
add_library(WarriorFactory STATIC Enemy/WarriorFactory.cpp)
add_library(WorldState STATIC WorldState.cpp)
add_library(EnemySpawner STATIC EnemySpawner.cpp)
